--- a/package.json
+++ b/package.json
@@ -1,14 +1,35 @@
 {
   "name": "vectorious",
-  "version": "4.8.5",
+  "version": "5.0.0",
   "description": "A high performance linear algebra library.",
-  "main": "vectorious.js",
+  "main": "built/vectorious.js",
   "scripts": {
-    "test": "mocha",
+    "test": "nyc mocha -r ts-node/register ./src/*.spec.ts",
     "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
     "docs": "jsdoc -c doc.json",
-    "build": "gulp clean && gulp build",
-    "postinstall": "opencollective-postinstall"
+    "build": "gulp clean && gulp build && tsc"
+  },
+  "browser": {
+    "nblas": false
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "gulpfile.js",
+      "**/*.d.ts",
+      "benchmarks/**",
+      "built/**",
+      "dist/**",
+      "examples/**",
+      "coverage/**"
+    ],
+    "reporter": [
+      "lcov"
+    ],
+    "all": true
   },
   "repository": {
     "type": "git",
@@ -34,28 +55,25 @@
   },
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0",
-    "babelify": "^10.0.0",
-    "benchmark": "^2.1.0",
-    "browserify": "^16.2.2",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.11.3",
+    "benchmark": "^2.1.4",
+    "browserify": "^16.2.3",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^3.0.0",
-    "jsdoc": "^3.4.3",
-    "minami": "^1.1.1",
-    "mocha": "^5.1.1",
+    "gulp-uglify": "^3.0.1",
+    "jsdoc": "^3.5.5",
+    "minami": "^1.2.3",
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1",
+    "ts-node": "^7.0.1",
+    "tsify": "^4.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "optionalDependencies": {
-    "nblas": "^1.2.0"
-  },
-  "dependencies": {
-    "opencollective-postinstall": "^2.0.0"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/vectorious"
+    "nblas": "^1.2.2"
   }
 }
